# beseder-demo-apps

./: README.md
atm-demo/: atm-demo.cabal  stack.yaml
atm-demo/Apps/HelloATM/: Main.hs
atm-demo/src/Beseder/Atm/: AtmApp.hs  AtmAppAsrt.hs  AtmAppInit.hs  AtmAppProp.hs  AtmAppUI.hs  AtmAppUIProp.hs  AtmLoopApp.hs
atm-demo/src/Beseder/Atm/Magic/: Card.hs
atm-demo/src/Beseder/Atm/Resources/: AccountRes.hs  CardReaderRes.hs  CashDispenserRes.hs  TerminalRes.hs
atm-demo/src/Beseder/Atm/Resources/Types/: Domain.hs
atm-demo/src/Beseder/Atm/Resources/UIImpl/: AccountUI.hs  CardReaderUI.hs  CashDispenserUI.hs  TerminalUI.hs
blackjack-demo/: blackjack-demo.cabal  hie.yaml
blackjack-demo/Apps/: Main.hs  MainPrompt.hs  MainSDUI.hs
blackjack-demo/src/Beseder/BlackJack/Apps/: BlackJackAutoApp.hs  BlackJackPromptApp.hs  BlackJackSDUIApp.hs
blackjack-demo/src/Beseder/BlackJack/Game/: BlackJack.hs  Card.hs
blackjack-demo/src/Beseder/BlackJack/Resource/: BlackJackRes.hs
callback-demo/: callback-demo.cabal  stack.yaml
callback-demo/src/Beseder/Callback/: CallbackApp.hs  CallbackTimerApp.hs
callback-demo/src/Beseder/Callback/Resources/: CallbackRes.hs  OutboundCallRes.hs
